// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hindu Arabic System English The text should be three fourteen arab sixty crore seven lakh twenty eight thousand one hundred ninety five 1`] = `
<span
  className="number2words__container"
>
  fourteen arab sixty crore seven lakh twenty eight thousand one hundred ninety five
</span>
`;

exports[`Hindu Arabic System Nepali The text should be three चौध अर्ब साठ्ठी करोड सात लाख अठ्ठाइस हजार एक सय पन्चान्नब्बे 1`] = `
<span
  className="number2words__container"
>
  चौध अर्ब साठ्ठी करोड सात लाख अठ्ठाइस हजार एक सय पन्चान्नब्बे
</span>
`;

exports[`International System The text should be eight hundred ninety four 1`] = `
<span
  className="number2words__container"
>
  eight hundred ninety four
</span>
`;

exports[`International System The text should be fourteen billion six hundred million seven hundred twenty eight thousand one hundred ninety five 1`] = `
<span
  className="number2words__container"
>
  fourteen billion six hundred million seven hundred twenty eight thousand one hundred ninety five
</span>
`;

exports[`International System The text should be three 1`] = `
<span
  className="number2words__container"
>
  three
</span>
`;
